# leet-suite

./: .gitlab-ci.yml  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  tox.ini
.devcontainer/: devcontainer.json  starship-eyecandy.sh
.github/workflows/: changelog.yml  publish.yml  tag.yml
src/leet/test_suite/: __init__.py  comparators.py
tests/: test_case.py  test_comparators.py
