[project]
name = "leet-suite"
version = "0.1.0"
description = "LeetSuite"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "ascii-graph>=1.5.2",
    "commitizen>=4.9.1",
]

[dependency-groups]
pre-commit = [
    "deptry>=0.20.0",
    "pre-commit>=3.5.0",
]
test = [
    "deptry>=0.20.0",
    "coverage>=7.6.1",
    "pytest>=8.3.4",
    "pytest-httpx>=0.35.0",
]

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q"
testpaths = [
    "tests",
]
pythonpath = [
  "src"
]

[tool.pytest]
testpaths = "tests"
log_cli = "true"

[tool.commitizen]
name = "cz_conventional_commits"
version = "0.1.0"
tag_format = "$version"
changelog_incremental = true
update_changelog_on_bump = true
version_files = ["src/leet/__init__.py:__version__", "pyproject.toml:^version"]
bump_message = "release $current_version -> $new_version"

[tool.deptry]
pep621_dev_dependency_groups = ["precommit", "test"]
known_first_party = ["leet"]
extend_exclude = ["pipelines"]
